src/renderer/App.scss
@import 'react-toastify/dist/ReactToastify.css';
@import 'flatpickr/dist/themes/material_green.css';

@import 'react-big-calendar/lib/css/react-big-calendar.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  input[type='number']::-webkit-inner-spin-button,
  input[type='number']::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
}

body {
  height: 100vh;
  user-select: none;
}

/* Switch */
/* The switch - the box around the slider */
.switch {
  font-size: 15px;
  position: relative;
  display: inline-block;
  width: 3.5em;
  height: 2em;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  inset: 0;
  background: #9fccfa;
  border-radius: 50px;
  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.slider:before {
  position: absolute;
  content: '';
  display: flex;
  align-items: center;
  justify-content: center;
  height: 2em;
  width: 2em;
  inset: 0;
  background-color: white;
  border-radius: 50px;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.switch input:checked + .slider {
  background: #0974f1;
}

.switch input:focus + .slider {
  box-shadow: 0 0 1px #0974f1;
}

.switch input:checked + .slider:before {
  transform: translateX(1.6em);
}

/* Global */

/* Hide scrollbar for Chrome, Safari and Opera */
.hide-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.hide-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

/* Custom Scrollbar */
::-webkit-scrollbar {
  width: 6px;
  height: 3px;
  cursor: pointer;
  /* background-color: rgba(229, 231, 235, var(--bg-opacity)); */
}
::-webkit-scrollbar-track {
  background-color: rgba(229, 231, 235, var(--bg-opacity));
  cursor: pointer;
  /* background: red; */
}
::-webkit-scrollbar-thumb {
  cursor: pointer;
  background-color: #a0aec0;
  /* outline: 1px solid slategrey; */
}

/* Inventory */
.inventory_add_tax > div:nth-of-type(1) {
  background-color: white;
  /* border: gray; */
  border-radius: 10rem;
  padding: 0.4rem;
}

.service_team > div:nth-of-type(1) {
  background-color: white;
  /* border: gray; */
  border-radius: 1rem;
  padding: 0.4rem;
  // padding-block: 1rem;
}

/* Accordian */

.wrapper {
  border-bottom: 1px solid black;
  overflow: hidden;
}
.wrapper .question-container {
  width: 100%;
  text-align: left;
  padding: 20px 10px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-weight: 500;
  font-size: 20px;
  background: transparent;
  border: none;
  cursor: pointer;
}
/* .question-container.active {
  color: #1db954;
  background-image: linear-gradient(
    90deg,
    transparent,
    rgba(0, 0, 0, 0.04),
    transparent
  );
} */
/* .wrapper .question-container:hover {
  background-image: linear-gradient(
    90deg,
    transparent,
    rgba(0, 0, 0, 0.04),
    transparent
  );
} */
.wrapper .arrow {
  font-size: 2rem;
  transition: 0.1s ease-in-out;
}
.arrow.active {
  rotate: 180deg;
  color: #1db954;
}
.wrapper .answer-container {
  padding: 0 1rem;
  transition: height 0.2s ease-in-out;
}
.wrapper .answer-content {
  padding: 1rem 0;
  font-size: 20px;
  font-style: italic;
}

* {
  box-sizing: border-box;
}

/* Drawer */
.category-drawer {
  width: 45vw;
  background-color: white;
  transition: 0.5s !important;
}

@media screen and (max-width: 1100px) {
  .category-drawer {
    width: 65vw;
  }
}

@media screen and (max-width: 768px) {
  .category-drawer {
    width: 100% !important;
  }
  .category-close-btn {
    left: 0% !important;
    top: 1%;
  }
}

.category-close-btn {
  left: -12%;
}

/* Flatpick */

.flatpickr-input {
  @apply border border-gray-300 w-full h-12 rounded-full block p-2.5 px-4 text-sm text-gray-900 bg-white resize-none;
}

.time_picker {
  .flatpickr-input {
    @apply border-none rounded-none !outline-none p-0 m-0 w-16;
  }
}

/* Charts */
.apexcharts-toolbar {
  z-index: 0 !important;
}

/* Tables */

@media (min-width: 768px) {
  table {
    display: inline-table !important;
  }

  thead tr:not(:first-child) {
    display: none;
  }
}

th {
  position: sticky;
  top: 0;
  background-color: rgb(249 250 251);
}

@media screen and (max-width: 768px) {
  th {
    position: relative;
  }

  tr:not(:first-child) {
    margin-top: 16px;
  }

  th:first-child {
    height: 150px;
    max-height: 150px;
    min-height: 150px;
  }

  tbody tr td:first-child {
    height: 149px;
    max-height: 149px;
    min-height: 149px;
  }

  th:nth-child(2) {
    height: 50px;
    max-height: 50px;
    min-height: 50px;
  }

  tbody tr td:nth-child(2) {
    height: 50px;
    max-height: 50px;
    min-height: 50px;
  }

  th:nth-child(3) {
    height: 200px;
    max-height: 200px;
    min-height: 200px;
  }

  tbody tr td:nth-child(3) {
    height: 200px;
    max-height: 200px;
    min-height: 200px;
  }

  th:nth-child(4) {
    height: 50px;
    max-height: 50px;
    min-height: 50px;
  }

  tbody tr td:nth-child(4) {
    height: 50px;
    max-height: 50px;
    min-height: 50px;
  }

  th:nth-child(5) {
    height: 50px;
    max-height: 50px;
    min-height: 50px;
  }

  tbody tr td:nth-child(5) {
    height: 50px;
    max-height: 50px;
    min-height: 50px;
  }

  th:nth-child(6) {
    height: 80px;
    max-height: 80px;
    min-height: 80px;
  }

  tbody tr td:nth-child(6) {
    height: 80px;
    max-height: 80px;
    min-height: 80px;
  }
}

/* Calendar */

.rbc-month-header {
  height: 50px;
  min-height: 50px;
  max-height: 50px;
  .rbc-header {
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

.rbc-day-bg:hover {
  background-color: #a0aec0;
}

